--- a/views/mails/baseEmail.pug
+++ b/views/mails/baseEmail.pug
@@ -36,7 +36,7 @@ html
                                     tbody
                                         tr
                                             td.content-block
-                                                span.apple-link Eshop  Inc, 123 Nowhere Road, San Francisco CA 99999
+                                                span.apple-link Eshop  Inc, New Damietta, Egy
                                                 br
                                                 |  Don't like these emails?
                                                 a(href='#') Unsubscribe
